sending last minute changes

--- a/index.html
+++ b/index.html
@@ -254,20 +254,20 @@
 <div class="pimg3">
   <div class="ptext">
       <span class="border trans">
-        Team Schedule
+       <a href="assets/secondaryPages/scores.html">Scores</a>
       </span>
   </div>
 </div>
 <section class="section section-dark">
-  <h2>Contact Us</h2>
+  <h2>Premium Picks</h2>
   <p>
-    Contact us below for individualized guidance on your next weeks pick!
+    Sign up for our Premium pick service (PPS) every week we will put out our selection of top players that we expect to be the winning ingredients.
   </p>
 </section>
 <div class="pimg4">
   <div class="ptext">
       <span class="border">
-        <a href="contact.html">Contact Us</a>
+        <a href="assets/secondaryPages/contact.html">Contact Us</a>
       </span>
   </div>
 </div>
@@ -276,7 +276,7 @@
 
 
 <nav class="navbar navbar-inverse navbar-bottom" style="margin-bottom: 0;">
-  <div style="margin-left: 47%; margin-right: 47%;">&copy;Kobra Kai</div>
+  <div style="margin-left: 45%; margin-right: 45%; color: beige;">&copy;Kobra Kai</div>
 </nav>
 
 </body>
