--- a/assets/secondaryPages/contact.html
+++ b/assets/secondaryPages/contact.html
@@ -12,7 +12,7 @@
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-
+  <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
 
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="script" href="./assets/javaScript/logic.js">
@@ -234,15 +234,19 @@
               <button type="submit" class="btn btn-default">Send Message</button>
             </form>
 
+
             <hr>
             <div class="contact us">
               <h3>Follow Us</h3>
               <ul class="list-inline banner-social-buttons">
-                <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span class="network-name">Twitter</span></i></a>
+                <li><a href="https://twitter.com/V_Picks" class="btn btn-default btn-lg"><i class="fa fa-twitter"> <span
+                    class="network-name">Twitter</span></i></a>
                 </li>
-                <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a>
+                <li><a href="https://www.facebook.com/value.picks.54" class="btn btn-default btn-lg"><i
+                    class="fa fa-facebook"> <span class="network-name">Facebook</span></i></a>
                 </li>
-                <li><a href="#" class="btn btn-default btn-lg"><i class="fa fa-youtube-play"> <span
+                <li><a href="https://www.instagram.com/VPicks01/?hl=en" class="btn btn-default btn-lg"><i
+                    class="fa fa-youtube-play"> <span
                     class="network-name">Instagram</span></i></a>
                 </li>
               </ul>
@@ -253,8 +257,7 @@
     </div>
   </section>
 
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAccga5ubuDi3yUxbpz9tD6C-LtVM2kMyc&callback=initMap"
-          async defer></script>
+
   <div id="map"></div>
   <script>
     var map;
@@ -265,8 +268,10 @@
         zoom: 8
       });
     }
-  </script>
 
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?key= AIzaSyDyP3uven7zzz8TwQTd9m10LI9N5ePVblg&callback=initMap"
+          async defer></script>
 
   <nav class="navbar navbar-inverse navbar-bottom" style="margin-bottom: 0;">
     <div style="margin-left: 47%; margin-right: 47%;">&copy;Kobra Kai</div>
