--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <img src="./assets/images/lg.png" width="90" height="50" class="d-inline-block align-top" alt="">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style = "z-index: 1000">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar"
+                  style="z-index: 1000">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -261,7 +262,8 @@
 <section class="section section-dark">
   <h2>Premium Picks</h2>
   <p>
-    Sign up for our Premium pick service (PPS) every week we will put out our selection of top players that we expect to be the winning ingredients.
+    Sign up for our Premium pick service (PPS) every week we will put out our selection of top players that we expect to
+    be the winning ingredients.
   </p>
 </section>
 <div class="pimg4">
